# tai-assignment1-group8

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  compare.py  compare.sh  graphs.ipynb
example/: chry_test_mod.txt
results/: alpha.csv  comp_main_file.txt  compare.csv  default.csv  limit.csv  lookback_size.csv  misses_threshold.csv  mutate_0.1.csv  mutate_0.2.csv  mutate_0.3.csv  mutate_0.4.csv  mutate_0.5.csv  mutate_0.6.csv  mutate_0.7.csv  mutate_0.8.csv  mutate_0.9.csv  original_comp.csv  other_comp.csv  threshold.csv  window.csv
src/: cpm.cpp  cpm.py  cpm.txt
src/copymodel/: CopyModel.cpp  CopyModel.h  CopyModelRunner.cpp  CopyModelRunner.h  program
src/cpm/: main.cpp
src/mutate/: main.cpp
src/reader/: FileReader.cpp  FileReader.h
